[package]
name = "modmark"
version = "0.1.1"
authors = ["Tristan Isham <tristan@isham.co>"]
edition = "2018"
repository = "https://github.com/tristanisham/ModMark"
description = "A markup language for productive people."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }